// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PaywallDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`PaywallDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`PaywallDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
